// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async actions creates PASSWORD_RESET_ERROR when fetching to-dos has been done 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "payload": undefined,
    "type": "PASSWORD_RESET_ERROR",
  },
]
`;

exports[`async actions creates PASSWORD_RESET_ERROR when reset password action was not successful 1`] = `
Array [
  Object {
    "payload": "invalid Email",
    "type": "PASSWORD_RESET_ERROR",
  },
]
`;

exports[`async actions creates PASSWORD_RESET_SUCCESS when fetching to-dos has been done 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "payload": "Please check your email",
    "type": "PASSWORD_RESET_SUCCESS",
  },
]
`;

exports[`async actions creates PASSWORD_RESET_SUCCESS when reset password action was successful 1`] = `
Array [
  Object {
    "payload": "Please check your email",
    "type": "PASSWORD_RESET_SUCCESS",
  },
]
`;

exports[`async actions updates loading to true in state 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
]
`;
